--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,7 @@ form.travel-search-form textarea.materialize-textarea {
     background-color: #fff;
     border: 1px solid #000;
     border-radius: 22px;
+    padding-left: 8px !important;
     box-shadow:
     2.8px 2.8px 2px rgba(0, 0, 0, 0.02),
     6.7px 6.7px 2px rgba(0, 0, 0, 0.028),
@@ -188,7 +189,6 @@ form.travel-search-form textarea.materialize-textarea {
     100px 100px 60px rgba(0, 0, 0, 0.07);
 }
 form.travel-search-form input:focus {
-    padding-left: 4px;
     border-bottom: #000;
     box-shadow: none;
 }
@@ -244,6 +244,7 @@ form.contact-form textarea.materialize-textarea {
     border: 1px solid #000;
     border-radius: 22px;
     transition: 0.4s;
+    padding-left: 8px !important;
 }
 input[type=text]:not(.browser-default):focus:not([readonly]),
 input[type=email]:not(.browser-default):focus:not([readonly]),
